# backend-demo

./: .env  Cargo.toml  README.md  backend.db
migrations/2021-03-09-095542_user_and_post/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  operations.rs  schema.rs  server_test.rs
