[package]
name = "backend-demo"
version = "0.1.0"
authors = ["ChrisZhang <zcyjim@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
qstring = "0.7.2"
serde = "1.0.124"
serde_json = "1.0.64"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.19"